--- a/exemplo1/index.css
+++ b/exemplo1/index.css
@@ -1,36 +1,5 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-body{
-    height: 100vh;
-}
-
-.container{
-    max-width: 700px;
-    display: flex;
-    margin: 0 auto;
-    flex-wrap: wrap;
-}
-
-.card{
-    width: 33.33%;
-    height: 100px;
-    background-color: #ADB5BD;
-    border-radius: 8px;
-    border: 4px solid #fff;
-}
-
-@media(max-width: 900px){
-    .card{
-        width: 50%;
-    }
-}
-
 @media(max-width: 400px){
-    .card{
-        width: 100%;
+    body{
+        background-color: blue;
     }
 }
