--- a/exemplo2/index.css
+++ b/exemplo2/index.css
@@ -4,49 +4,33 @@
     box-sizing: border-box;
 }
 
-nav{
+body{
+    height: 100vh;
+}
+
+.container{
+    max-width: 700px;
     display: flex;
-    justify-content:space-between;
-    align-items: center;
-    padding: 32px;
+    margin: 0 auto;
+    flex-wrap: wrap;
 }
 
-nav ul{
-    display: flex;
-    list-style: none;
-    gap: 20px;
+.card{
+    width: 33.33%;
+    height: 100px;
+    background-color: #ADB5BD;
+    border-radius: 8px;
+    border: 4px solid #fff;
 }
 
-nav button{
-    display: none;
-}
-
-@media(max-width: 800px){
-
-    nav{
-        flex-wrap: wrap;
+@media(max-width: 900px){
+    .card{
+        width: 50%;
     }
+}
 
-    nav ul{
-        flex-direction: column;
-        padding-top: 32px;
-        text-align: center;
+@media(max-width: 400px){
+    .card{
         width: 100%;
-        display: none;
     }
-
-    nav button{
-        display: block;
-        height: 38px;
-        border: 1px solid transparent;
-        border-radius: 4px;
-        padding: 0 16px;
-        font-weight: 600;
-        cursor: pointer;
-    }
-
-    nav ul.show{
-        display: flex;
-    }
-    
 }
